--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --ext .ts,.tsx",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "deploy": "npm run build && firebase deploy"
   },
   "dependencies": {
     "axios": "^1.4.0",
     "clsx": "^1.2.1",
     "dayjs": "^1.11.9",
+    "firebase": "^12.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1"
