--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "preview": "vite preview",
     "lint": "eslint . --ext .ts,.tsx",
     "format": "prettier --write .",
-    "deploy": "npm run build && firebase deploy"
+    "deploy": "npm run build && firebase deploy",
+    "test": "vitest",
+    "test:ui": "vitest --ui"
   },
   "dependencies": {
     "axios": "^1.4.0",
@@ -20,11 +22,15 @@
     "react-router-dom": "^6.14.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/react": "^19.2.6",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.4.22",
     "eslint": "^8.0.0",
+    "jsdom": "^27.2.0",
     "postcss": "^8.5.6",
     "prettier": "^2.8.8",
     "tailwindcss": "^3.4.4",
